feat: 관리 버튼 삭제하여 사용하기 편하도록 수정

--- a/popup.html
+++ b/popup.html
@@ -41,9 +41,6 @@
             <span>프리셋</span>
             <div class="spacer"></div>
             <button id="addPresetBtn" type="button" class="chip">추가</button>
-            <button id="managePresetBtn" type="button" class="chip">
-              관리
-            </button>
           </div>
           <div id="presetsContainer" class="preset-list"></div>
         </div>
@@ -53,7 +50,7 @@
         </div>
 
         <button id="downloadBtn" type="submit" class="primary">
-          이미지 생성 및 다운로드
+          이미지 다운로드
         </button>
       </form>
       <p class="hint">파일명: <code>placeholder_{w}x{h}.png</code></p>
