feat: 포맷 지정 기능 추가

--- a/popup.html
+++ b/popup.html
@@ -36,6 +36,16 @@
           />
         </div>
 
+        <div class="row">
+          <label for="format">형식 (Format)</label>
+          <select id="format" name="format">
+            <option value="png" selected>PNG (.png)</option>
+            <option value="jpg">JPG (.jpg)</option>
+            <option value="jpeg">JPEG (.jpeg)</option>
+            <option value="webp">WEBP (.webp)</option>
+          </select>
+        </div>
+
         <div class="presets" aria-label="자주 쓰는 사이즈">
           <div class="presets-toolbar">
             <span>프리셋</span>
