feat: 파일명 동적으로 변화하도록 수정

--- a/popup.html
+++ b/popup.html
@@ -63,7 +63,9 @@
           이미지 다운로드
         </button>
       </form>
-      <p class="hint">파일명: <code>placeholder_{w}x{h}.png</code></p>
+      <p class="hint">
+        파일명: <code id="filenamePreview">placeholder_{w}x{h}.png</code>
+      </p>
     </div>
 
     <script src="popup.js"></script>
